Text alignmnent issues fixed

--- a/imports/ui/stylesheets/styles.less
+++ b/imports/ui/stylesheets/styles.less
@@ -21,7 +21,7 @@
     font-size: 16px;
     vertical-align: middle;
     line-height: 44px;
-    margin-left: 35px !important;
+    margin-left: 43px !important;
   }
   img {
     height: 24px !important;
@@ -70,21 +70,24 @@
   align-items: center;
   flex-wrap: nowrap;
   opacity: 1 !important;
-  h2,h3,h4,h5,h6 {
+  h2,h3,h4,h5 {
     margin-top: 0px;
     margin-bottom: 0px;
   }
   h5 {
-    margin-top: 7px;
+    margin-top: 3px;
+  }
+  h6 {
+    margin-top: 6px;
   }
   .time {
     font-weight: normal;
     font-size: 2.39vh;
     //font-size: 16px;
-    margin-bottom: 15px !important;
+    margin-bottom: 12px !important;
   }
   .font-56 {
-    margin-bottom: 20px !important;
+    margin-bottom: 4px !important;
   }
 }
 
@@ -171,17 +174,6 @@
   color: #000 !important;
 }
 
-.slide-up, .slide-down {
-  overflow:hidden;
-}
-.slide-up , .slide-down {
-  transform: translateY(-100%);
-  transition: .4s ease-in-out;
-}
-.slide-down {
-  transform: translateY(0);
-}
-
 .font-56 {
   color: #fff;
   //font-size: 56px;
@@ -216,6 +208,7 @@
   font-weight: normal;
   font-size: 2.39vh;
   //font-size: 16px;
+  margin-top: 17px !important;
 }
 
 .placeholder1c-font {
